2002-07-17  Adam Fedor  <fedor@gnu.org>

	* Version: 0.7.9
	* Documentation/news.texi: Update
	* Documentation/gsdoc/*: Updated from source files.
	* Source/NSWorkspace.m: Comment fix.

Wed Jul 17 15:24:54 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/NSTextView.h ([-becomeKeyWindow]): Declare.

Wed Jul 17 15:23:28 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Patch from David Ayers <d.ayers@inode.at>:
	* Source/NSTextView.m ([-becomeKeyWindow]): Implemented.
	* Source/NSWindow.m ([-becomeKeyWindow]): Set the _f.is_key flag
	immediately after checking it.

Tue Jul 16 19:40:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSWindow.m ([-cacheImageInRect:]): Intersect the
	rectangle with the window view frame, not the content view frame.
	([-restoreCachedImage]): Draw in the window view, not in the
	content view.

Mon Jul 15 15:55:21 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSWindow.m ([NSWindow +initialize]): Removed left-over
	NSLog call.

2002-07-14  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSTabView.h: Add missing method.

2002-07-14 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSTableView.m: 
	[-NSTableView _editNextEditableCellAfterRow:column:] corrected
	a problem with the loop which seeks the next editable cell.  It
	was using incorrect values in the call to isCellEditable in the
	second for which was causing an exception to be thrown.
	* Source/NSOutlineView.m: ([-editColumn:row:withEvent:select:])
	corrected a problem in this method which was causing the cell
	to be drawn incorrectly when editing a column other than the
	outline column.

Fri Jul 12 12:55:17 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Patch from Benhur Stein <benhur-gnustep@inf.ufsm.br>:
	* Headers/gnustep/gui/NSWindow.h (_cachedImage,
	_cachedImageOrigin): New instance variables.
	* Source/NSWindow.m ([-dealloc]): Release _cachedImage if needed.
	([-display]): Invoke discardCachedImage.
	([-cacheImageInRect:]): Implemented.