@@ -1,7 +1,7 @@
 README
 ******
 
-This is version 0.7.8 of the GNUstep GUI library (`gnustep-gui').
+This is version 0.7.9 of the GNUstep GUI library (`gnustep-gui').
 
    Here is some introductory info to get you started:
 
